# aws-api-gateway

./: create-item.py  create-table.py  flask-app.py  lambda_function.py  pyproject.toml  songs.json  update_item.py
templates/: index.html
