[tool.poetry]
name = "dynamodb"
version = "0.1.0"
description = ""
authors = ["Ajmal Muhammed <ajmalmohammedn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.26.149"
flask = "^2.3.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
